<resources>

    <string name="app_name">Team4CaRental</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="title_activity_admin">Admin Homepage</string>
    <string name="title_activity_manager">Manager Homepage</string>
    <string name="title_activity_user">User Homepage</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_main">Login</string>
    <string name="title_activity_register">Register Account</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="welcome">"Welcome !"</string>

    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_is_car_available">Only Available</string>
    <string name="reserve">Reserve</string>
    <string name="onstar">onStar</string>
    <string name="gps">GPS</string>
    <string name="siriusxm">SiriusXM</string>
    <string name="prompt_name">Name</string>
    <string name="edit">Edit</string>
    <string name="view_profile">View Profile</string>
    <string name="view_all_reservations">View Resverations</string>
    <string name="view_cars">View Cars</string>
    <string name="start_date">Start Date</string>
    <string name="end_time">End Time</string>
    <string name="end_date">End Date</string>
    <string name="start_time">Start Time</string>
    <string name="search">Search</string>
    <string name="search_cars">Search Cars</string>
    <string name="prompt_carname">Car Name</string>
    <string name="prompt_capacity">Capacity</string>
    <string name="prompt_weekday_rate">Weekday Rate</string>
    <string name="prompt_weekend_rate">Weekend Rate</string>
    <string name="prompt_week_rate">Week Rate</string>
    <string name="prompt_gps_rate">GPS Rate</string>
    <string name="prompt_siriusXM_rate">SiriusXM Rate</string>
    <string name="prompt_on_star_rate">OnStar Rate</string>
    <string name="status">Status</string>
    <string name="start">Start</string>
    <string name="back">Back</string>
    <string name="duration">Duration</string>
    <string name="prcie">Total Price</string>
    <string name="number_of_occupants">Number of occupants</string>
    <string name="prompt_is_user_member">is member</string>
    <string name="prompt_uta_id">UTA id</string>
    <string name="prompt_uta">UTA Account</string>
    <string name="prompt_status">status</string>
    <string name="done">Done</string>
</resources>