<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.user.requestCar.SpecificCarActivity">

    <TextView
        android:id="@+id/for_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/checkBox_gps"
        android:layout_width="421dp"
        android:layout_height="19dp"
        android:text="@string/gps" />

    <CheckBox
        android:id="@+id/checkBox_onstar"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:text="@string/onstar" />

    <CheckBox
        android:id="@+id/checkBox_siriusXM"
        android:layout_width="427dp"
        android:layout_height="wrap_content"
        android:text="@string/siriusxm" />

    <Button
        android:id="@+id/reserve"
        android:layout_width="311dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="64dp"
        android:text="@string/reserve"
        />

</LinearLayout>
