<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context=".ui.manager.ManagerFragment">

<SearchView
    android:id="@+id/search_view_cars"
    android:iconifiedByDefault="false"
    android:queryHint="Search Here"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <CheckBox
            android:text="@string/prompt_is_car_available"
            android:id="@+id/checkbox_available_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <EditText
                    android:id="@+id/start_date"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:focusable="false"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/start_date" />
                <EditText
                    android:id="@+id/start_time"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:focusable="false"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/start_time" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <EditText
                    android:id="@+id/end_date"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:focusable="false"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/start_date"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/start_time"
                    android:ems="10"
                    android:hint="@string/end_date" />
                <EditText
                    android:id="@+id/end_time"
                    android:layout_width="0dp"
                    android:focusable="false"
                    android:layout_weight="1"
                    app:layout_constraintTop_toBottomOf="@id/start_date"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/end_time" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

<ListView
    android:id="@+id/car_list"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    />
</LinearLayout>