<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.user.requestCar.SpecificCarActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal">

    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="700dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal">
            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:gravity="start|center"
                android:text="Reservation number"
                android:textSize="14dp" />

            <EditText
                android:id="@+id/Number_of_Reservation"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="4dp"
                android:enabled="false"
                android:selectAllOnFocus="true"
                android:textSize="14dp"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="2"
            android:gravity="start|center"
            android:text="UserName"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/UserName"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_weight="4"
            android:enabled="false"
            android:selectAllOnFocus="true"
            android:textSize="14dp"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="2"
            android:gravity="start|center"
            android:text="Start"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/Start"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_weight="4"
            android:enabled="false"
            android:selectAllOnFocus="true"
            android:textSize="14dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="2"
            android:gravity="start|center"
            android:text="Back"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/Back"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_weight="4"
            android:enabled="false"
            android:selectAllOnFocus="true"
            android:textSize="14dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="2"
            android:gravity="start|center"
            android:text="Occupation"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/occupation"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_weight="4"
            android:enabled="false"
            android:selectAllOnFocus="true"
            android:textSize="14dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="2"
            android:gravity="start|center"
            android:text="Duration"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/Duration"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_weight="4"
            android:enabled="false"
            android:selectAllOnFocus="true"
            android:textSize="14dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="2"
            android:gravity="start|center"
            android:text="CarName"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/Car_name"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_weight="4"
            android:enabled="false"
            android:selectAllOnFocus="true"
            android:textSize="14dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="2"
            android:gravity="start|center"
            android:text="Capacity"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/Capacity"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_weight="4"
            android:enabled="false"
            android:selectAllOnFocus="true"
            android:textSize="14dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="2"
            android:gravity="start|center"
            android:text="@string/prcie"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/total_price"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_weight="4"
            android:enabled="false"
            android:selectAllOnFocus="true"
            android:textSize="14dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp">

        <CheckBox
            android:id="@+id/checkBox_gps"
            android:layout_width="100dp"
            android:layout_height="19dp"
            android:text="@string/gps" />

        <CheckBox
            android:id="@+id/checkBox_onstar"
            android:layout_width="100dp"
            android:layout_height="44dp"
            android:text="@string/onstar" />

        <CheckBox
            android:id="@+id/checkBox_siriusXM"
            android:layout_width="427dp"
            android:layout_height="wrap_content"
            android:text="@string/siriusxm" />
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/edit_reservation"
                android:layout_width="200dp"
                android:layout_height="37dp"
                android:layout_marginStart="48dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="48dp"
                android:layout_marginBottom="64dp"
                android:text="EDIT RESERVATION"
                android:textSize="14dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel_reservation"
                android:layout_width="200dp"
                android:layout_height="38dp"
                android:layout_marginStart="48dp"
                android:text="CANCEL RESERVATION"
                android:textSize="14dp" />
        </LinearLayout>
    </LinearLayout>
    </LinearLayout>
</LinearLayout>